--- a/web/css/zeega-jda.css
+++ b/web/css/zeega-jda.css
@@ -5,7 +5,7 @@
 	
 	background-color: #444;
 	padding:4px 0;
-	z-index:2;
+	z-index:50;
 	position: fixed;
 	top: 43px;
 	width:100%;
